# peryite

./: .gitignore  .travis.yml  CMakeCPP.cmake  CMakeLists.txt  CMakeReport.cmake  Makefile  README.md  run.sh
PeryiteUI/: GeoGen.sh  PeryiteUI.pro  geogendata.cpp  geogendata.h  geogenvisualization.cpp  geogenvisualization.h  geogenvisualization.ui  geogridlocation.cpp  geogridlocation.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  peryiteuidata.cpp  peryiteuidata.h  placeholderProcess.sh  popgendata.cpp  popgenvisualization.cpp  popgenvisualization.h  popgenvisualization.ui  testingwindow.cpp  util.cpp  util.h  visualizationcircle.cpp  visualizationcircle.h  visualizationgraphbar.cpp  visualizationgraphbar.h
PeryiteUI/build-PeryiteUI-Desktop_Qt_5_10_1_GCC_64bit-Debug/: PeryiteUI
assignments/Paper/Config  Files/: run_measles_16.xml  run_r0_12.xml
assignments/Paper/Tests_influenza_c/: TestResults_run_influenza_c.txt
assignments/Paper/Tests_measles_16/: TestResults_run_measles_16.txt
assignments/Paper/Tests_r0_12/: TestResults_run_r0_12.txt
assignments/diff_RNG/: results.txt  results_influenza_a.txt  results_influenza_b.txt  results_influenza_c.txt  results_measles_16.txt  results_measles_60.txt
assignments/diff_r0_vals/commit_054e205941df47e3c6081e5a9bb55896c14ec018/: r0.0.txt  r0.10.txt  r0.50.txt  r0.60.txt
assignments/diff_r0_vals/commit_fe088b0bc08fdf22c1f1302b2b462aec38cbf5e4/: r0.1.txt  r0.10.txt  r0.5.txt  r0.50.txt
assignments/diff_rngType/: rngTypeResultsFormat.py  rngTypeResults_formatted.txt  rngType_graphs.ods  totalResults_influenza.txt  totalResults_measles.txt
assignments/diff_threads/: ThreadResults  diff_threads_results.txt  threadResultsFormat.py  threadResults_formatted.txt  threads_graphs.ods  totalResults_influenza_1.txt  totalResults_influenza_2.txt  totalResults_influenza_3.txt  totalResults_influenza_4.txt  totalResults_influenza_5.txt  totalResults_influenza_6.txt  totalResults_influenza_7.txt  totalResults_influenza_8.txt  totalResults_measles_1.txt  totalResults_measles_2.txt  totalResults_measles_3.txt  totalResults_measles_4.txt  totalResults_measles_5.txt  totalResults_measles_6.txt  totalResults_measles_7.txt  totalResults_measles_8.txt
assignments/regio_contamination/: numbers
diff_r0_vals/: r0.-5.txt  r0.0.2.txt
diff_r0_vals/commit_054e205941df47e3c6081e5a9bb55896c14ec018/: r0.0.1.txt  r0.1.txt  r0.100.txt  r0.5.txt
diff_r0_vals/commit_fe088b0bc08fdf22c1f1302b2b462aec38cbf5e4/: r0.-5.txt  r0.0.1.txt  r0.0.2.txt  r0.0.txt  r0.100.txt  r0.60.txt
main/cpp/: CMakeLists.txt  cpp.cbp  cpp.depend  cpp.layout
main/cpp/PopGenNew/: DiscreteSampler.cpp  DiscreteSampler.h  GeogridGenerator.cpp  GeogridGenerator.h  PopulationGenerator.cpp  PopulationGenerator.h  main.cpp
main/cpp/contact/: LogPolicy.h
main/cpp/core/: ContactPool.h
main/cpp/pool/: ContactPool.cpp  ContactPool.h
main/cpp/pop/: Person.cpp  Person.h  PopBuilder.cpp  Population.cpp  Population.h  PopulationBuilder.cpp  SurveySeeder.cpp
main/cpp/sim/: CliController.cpp  CliController.h  GuiController.cpp  GuiController.h  Sim.cpp  Simulator.cpp  SimulatorBuilder.cpp  main.cpp
main/cpp/ui/: PeryiteUI.pro  StrideTest.sh  TODO.txt  editconfigform.cpp  editconfigform.h  editconfigform.ui  geogendata.cpp  geogendata.h  geogenvisualization.cpp  geogenvisualization.h  geogenvisualization.ui  geogridlocation.cpp  geogridlocation.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapviewerwindow.cpp  mapviewerwindow.h  mapviewerwindow.ui  peryiteuidata.h  popgendata.cpp  popgendata.h  popgenvisualization.cpp  popgenvisualization.h  stridescattergraph.cpp  stridescattergraph.h  stridescattergraph.ui  stridewindow.cpp  stridewindow.h  stridewindow.ui  testingscattergraph.cpp  testingscattergraph.h  testingscattergraph.ui  testingwindow.cpp  testingwindow.h  testingwindow.ui  util.cpp  util.h  visualization.cpp  visualization.h  (+2 more)
main/cpp/util/: CSV.h  GeoCoordCalculator.cpp  GeoCoordCalculator.h  GeoCoordinate.cpp  GeometryGeoCoord.cpp  GeometryGeoCoord.h  InstallDirs.cpp  InstallDirs.h  Regions.cpp  Regions.h  RunConfigManager.cpp  StatisticsRetriever.cpp  StatisticsRetriever.h
main/cpp/viewers/: MapViewer.cpp  MapViewer.h
main/python/examples/: CMakeLists.txt  runExperimentsBatchRuns1.py  runExperimentsBatchRuns2.py  runExperimentsBatchRuns3.py  runExperimentsBatchRuns4.py  runExperimentsBatchRuns5.py  runExperimentsRNG.py  runRngType_influenza.py  runRngType_measles.py  runThreads_influenza.py  runThreads_measles.py
main/python/pystride/: PyController.py
main/resources/: CMakeLists.txt
main/resources/config/: peryite_generator.xml  run_batch_default.xml  run_batchruntests1.xml  run_batchruntests5.xml  run_default.xml  run_generator_default.xml  (+1 more)
resources/bash/: clang-format-all  remove_trailing_space
resources/cmake/: CMakeLocal.cmake
stride_working/: CMakeLocal.cmake  run.sh
test/cpp/: CMakeLists.txt
test/cpp/myhayai/performance/: CMakeLists.txt  main.cpp  old.cpp  output_parser.py
test/cpp/myhayai/performance/Results/: Fragment  Ref_cities  School_cp_size  School_size  Work_fraction
test/cpp/myhayai/performance/Results/Sim/: Num_days  Num_threads
test/cpp/myhayai/performance/Results_final/: fragment_parser.py  fragment_results.txt  num_days.txt
test/cpp/myhayai/performance/Results_final/paper/: report.txt
test/cpp/myhayai/performance/Results_final/paper/configuration/: run_performance.xml
test/cpp/myhayai/performance/Results_final/paper/results/: papi_output_1m_no_fragment.txt  params_test_output.txt
test/cpp/myhayai/performance/Results_final/papi/: geogen  papi_output.txt  papi_output_1m_fragment.txt  papi_output_no_fragment.txt  papi_output_parser.py  timestep  total
test/cpp/myhayai/performance/Results_first/: Population_size  Student_commute_fraction  Student_fraction  University_cp_size  University_size  Work_commute_fraction  Workplace_size
test/cpp/myhayai/performance/Results_first/Sim/: Seeding_rate  Vaccine_link_probability  Vaccine_rate  r0
test/python/: CMakeLists.txt  testInfected.py  testPrint.py  testSimple.py
(+44 files in other folders)
